# agentic-reconciliation-engine

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml
agents/: crew.py  main.py  mock_reconciliation.py  pyproject.toml  seed_test_data.py
agents/agents/: alert_agent.py  bank_feed_agent.py  discrepancy_agent.py  ledger_agent.py  matching_agent.py
agents/proto_generated/: ledger_pb2.py  ledger_pb2_grpc.py
agents/tools/: csv_parser.py  email_tool.py  fuzzy_matcher.py  grpc_client.py  twilio_tool.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/discrepancies/: route.ts
dashboard/app/api/flag/: route.ts
dashboard/app/api/runs/: route.ts
dashboard/app/api/runs/[id]/: route.ts
dashboard/app/api/transactions/: route.ts
dashboard/app/api/trigger-run/: route.ts
dashboard/app/discrepancies/: page.tsx
dashboard/app/runs/[id]/: page.tsx
dashboard/app/transactions/: page.tsx
dashboard/lib/: db.ts
proto/: ledger.proto
