[project]
name = "reconciliation-agents"
version = "0.1.0"
description = "CrewAI multi-agent reconciliation layer for ledger-go"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "google-generativeai>=0.8.0",
    "twilio>=9.0.0",
    "pandas>=2.2.0",
    "rapidfuzz>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "structlog>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
